# rsschool-ml-capstone-project

./: .gitignore  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: main.yml
src/forest_ml/: create_sample_from_dataset.py  eda.py  feature_engineering.py  k_fold_cross_validation.py  model_pipeline.py  nested_cross_validation.py  parse_dataset.py  train.py
tests/: test_forest_ml.py  test_sample.csv
