[tool.poetry]
name = "forest_ml"
version = "0.1.0"
description = ""
authors = ["AnzhelikaKurnikova <anzhelika.kurnikova@vicuesoft.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.0.2"
pandas-profiling = "^3.1.0"
pandas = "1.3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
