[tool.poetry]
name = "forest_ml"
version = "0.1.0"
description = ""
authors = ["AnzhelikaKurnikova <anzhelika.kurnikova@vicuesoft.com>"]

[tool.poetry.scripts]
train = "forest_ml.train:train"
eda = "forest_ml.eda:create_eda"
sample = "forest_ml.create_sample_from_dataset:create_sample_from_dataset"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.0.2"
pandas-profiling = "^3.1.0"
pandas = "1.3.5"
mlflow = "^1.25.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
nox = "^2022.1.7"
black = "^22.3.0"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
